[RESOVLE] add basic without database
- basic search function
- no database is populated
- no tests! never used sinatra with RSpec
- add feature level spec later maybe

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,9 @@
 <form method='post'>
   <label for='area'>Area</label>
   <select name='area' id='area'>
-    <option>Note: area options should come from data</option>
+    <% areas.each do |a| %>
+      <option> <%= a %> </option>
+    <% end %>
   </select>
   <input type='submit'/>
 </form>
