[R] do the same feature by with data in the database

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -15,7 +15,7 @@
     <% results.each do |e| %>
     <tr>
       <td>
-        <%= e.date %>
+        <%= e.logged_date %>
       </td>
       <td>
         <%= e.price %>
