--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,9 +1,15 @@
 <html>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <head>
     <title>Mean Rent in NZ</title>
   </head>
+
   <body>
-    <h1>Mean Rent in NZ</h1>
-    <%= yield %>
+
+    <div class="container">
+      <h1>Mean Rent in NZ</h1>
+      <%= yield %>
+    </div>
+
   </body>
 </html>
